# terraform_external_data

./: AUTHORS.txt  setup.cfg  setup.py
terraform_external_data/: __init__.py  terraform_external_data.py
terraform_external_data/terraform_external_data.egg-info/: PKG-INFO  SOURCES.txt
