[metadata]
name = terraform-external-data
version = 1.0.2
author = Juozas Kibildis
author_email = juozas.kibildis@zenitech.co.uk
description = Terraform external data package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/juozaskibildis-zt/terraform_external_data
project_urls =
    Bug Tracker = https://github.com/juozaskibildis-zt/terraform_external_data/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = terraform_external_data
packages = find:
python_requires = >=3.6

[options.packages.find]
where = terraform_external_data